--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-    <title>Board Game Scorekeeper | Darrick Develops</title>
+    <title>Board Game Keep | Darrick Develops</title>
   </head>
   <body>
     <div id="root"></div>
